# football-manager-2024-reports

./: .gitignore  README.md  flake.nix  fm.cabal  format-haskell-code.sh  numbers-config  preview-extract.html
app/: Main.hs  OcrStats.hs  ReadPrinted.hs
app/FM/: Load.hs
data/matches/: template.json
ocr/: OcrStats.hs
